fix: reduce gap in image slider for improved layout

--- a/src/components/imageslider/index.css
+++ b/src/components/imageslider/index.css
@@ -37,7 +37,7 @@ body {
     background: white;
     white-space: nowrap;
     position: relative;
-    gap: 42rem;
+    gap: 28rem;
     display: flex;
 }
 
